--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,24 +2,42 @@
 
 @theme {
   --color-surface: rgb(255, 250, 255);
-  --color-surface-2: rgb(15, 20, 41);
-  --color-surface-3: rgb(32, 41, 72);
-  --color-fg: rgb(0, 0, 0);
+  --color-surface-2: rgb(241 245 249);
+  --color-surface-3: rgb(209, 213, 218);
+  --color-fg: rgb(22, 22, 22);
   --color-fg-muted: rgb(109, 109, 109);
+  --color-fg-muted-2: rgb(138, 138, 138);
   --color-fg-inverted: rgb(255, 250, 255);
   --color-primary: rgb(72, 99, 156);
+  --color-primary-hover: rgba(72, 99, 156, 0.836);
   --color-destructive: rgb(215, 38, 61);
   --color-success: rgb(21, 127, 31);
 }
 
 .dark {
-  --color-surface: rgb(2, 6, 24);
-  --color-surface-2: rgb(15, 20, 41);
-  --color-surface-3: rgb(32, 41, 72);
-  --color-fg: rgb(255, 250, 255);
-  --color-fg-muted: rgb(180, 180, 180);
-  --color-fg-inverted: rgb(0, 0, 0);
-  --color-primary: rgb(72 99 156);
-  --color-destructive: rgb(215 38 61);
-  --color-success: rgb(21 127 31);
+  --color-surface: rgb(255, 250, 255);
+  --color-surface-2: rgb(241 245 249);
+  --color-surface-3: rgb(209, 213, 218);
+  --color-fg: rgb(22, 22, 22);
+  --color-fg-muted: rgb(109, 109, 109);
+  --color-fg-muted-2: rgb(138, 138, 138);
+  --color-fg-inverted: rgb(255, 250, 255);
+  --color-primary: rgb(72, 99, 156);
+  --color-primary-hover: rgba(72, 99, 156, 0.836);
+  --color-destructive: rgb(215, 38, 61);
+  --color-success: rgb(21, 127, 31);
+}
+
+.dark {
+  --color-surface: rgb(255, 250, 255);
+  --color-surface-2: rgb(241 245 249);
+  --color-surface-3: rgb(209, 213, 218);
+  --color-fg: rgb(22, 22, 22);
+  --color-fg-muted: rgb(109, 109, 109);
+  --color-fg-muted-2: rgb(138, 138, 138);
+  --color-fg-inverted: rgb(255, 250, 255);
+  --color-primary: rgb(72, 99, 156);
+  --color-primary-hover: rgba(72, 99, 156, 0.836);
+  --color-destructive: rgb(215, 38, 61);
+  --color-success: rgb(21, 127, 31);
 }
